--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^3.3.5",
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
+    "path": "^0.12.7",
     "xmlhttprequest": "^1.8.0"
   }
 }
